--- a/config/database.mysql.yml
+++ b/config/database.mysql.yml
@@ -4,25 +4,25 @@
 #
 
 development:
-  adapter: mysql
+  adapter: mysql2
   database: radiant_dev
   username: root
   password:
-  socket: /tmp/mysql.sock
+  # socket: /tmp/mysql.sock
 
 test: &TEST
-  adapter: mysql
+  adapter: mysql2
   database: radiant_test
   username: root
   password: 123456789
-  socket: /tmp/mysql.sock
+  # socket: /tmp/mysql.sock
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: radiant_live
   username: root
   password: 123456789
-  socket: /tmp/mysql.sock
+  # socket: /tmp/mysql.sock
 
 cucumber:
   <<: *TEST
